--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,45 @@
-fastapi
-pydantic
+annotated-types==0.7.0
+anyio==4.10.0
+asyncpg==0.30.0
+beautifulsoup4==4.13.4
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.2.1
+distro==1.9.0
+et_xmlfile==2.0.0
+fake-useragent==2.2.0
+fastapi==0.116.1
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+iniconfig==2.1.0
+jiter==0.11.0
+lxml==5.3.0
+numpy==2.2.2
+openai==2.0.1
+openpyxl==3.1.5
+packaging==25.0
+pandas==2.3.0
+pluggy==1.6.0
+psycopg2-binary==2.9.10
+pydantic==2.11.9
+pydantic_core==2.33.2
+Pygments==2.19.2
+pytest==8.4.2
+pytest-asyncio==1.2.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+pytz==2025.2
+requests==2.32.4
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.8
+SQLAlchemy==2.0.43
+starlette==0.47.3
+tqdm==4.67.1
+typing-inspection==0.4.1
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.4.0
+uvicorn==0.35.0
